@@ -8,8 +8,8 @@
 \tabular{ll}{
 Package: \tab logcondiscr \cr
 Type: \tab Package \cr
-Version: \tab 1.0.2 \cr
-Date: \tab 2012-01-24 \cr
+Version: \tab 1.0.3 \cr
+Date: \tab 2012-10-06 \cr
 License: \tab GPL (>=2) \cr
 LazyLoad: \tab yes \cr
 }
